[package]
name = "rust-hyper"
version = "0.1.0"
authors = ["yo1000 <yoichi.kikuchi.aug@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.20"
futures = "0.1.25"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.35"
url = "1.7.2"
pretty_env_logger = "0.3.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
